--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Projet 3 de la formation Développeur Web d'OpenClassRoom",
   "main": "index.html",
   "scripts": {
-    "dev": "sass --watch src/scss/ohmyfood.scss src/css/ohmyfood.css --no-source-map",
-    "prod": "sass src/scss/ohmyfood.scss src/css/ohmyfood.css --style compressed --no-source-map"
+    "dev": "sass --watch scss/ohmyfood.scss css/ohmyfood.css --no-source-map",
+    "prod": "sass scss/ohmyfood.scss css/ohmyfood.css --style compressed --no-source-map"
   },
   "repository": {
     "type": "git",
